# fishregression

./: Dockerfile  README.md  pyproject.toml
note/: LinearRegression.ipynb  model.pkl
src/fr/: cli.py  curl.py  lr.py  main.py  manager.py
src/fr/model/: manager.py  model.pkl
