[project]
name = "fr"
version = "0.2.2"
description = "from sklearn.linear_model import LinearRegression 2 FastAPI"
authors = [
    {name = "HaramSs", email = "haram8274@gmail.com"},
]
dependencies = [
    "scikit-learn>=1.5.1",
    "pandas>=2.2.2",
    "numpy>=2.0.2",
    "pyarrow>=17.0.0",
    "fastapi>=0.114.0",
    "uvicorn[standard]>=0.30.6",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true

[project.scripts]
pp = 'fr.cli:predict'

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
]
note = [
    "notebook>=7.2.2",
    "matplotlib>=3.9.2",
]
